Correct project nav spacing

--- a/assets/css/pages/_project-index.scss
+++ b/assets/css/pages/_project-index.scss
@@ -56,6 +56,10 @@
 	}
 }
 
+.project-subnav {
+	margin-bottom: 48px;
+}
+
 //
 // Category Header
 //
